2009-11-29  Juri Linkov  <juri@jurta.org>

	* gnus-sum.el (gnus-recenter): Use `recenter-top-bottom'
	when it is fboundp in GNU Emacs 23.1.  Put `isearch-scroll' property
	on `gnus-recenter'. (Bug#4698, Bug#4981)

2009-11-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-from-style, message-interactive)
	(message-signature): Always set default values from the corresponding
	mail-* variables.
	(message-cite-prefix-regexp, message-sendmail-envelope-from)
	(message-yank-prefix, message-indentation-spaces)
	(message-signature-file, message-default-headers): Use boundp rather
	than (featurep 'xemacs) to check if the corresponding mail-* variables
	exist.

2009-11-20  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-send-mail-with-sendmail): Revert last change.

2009-11-19  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-from-style, message-interactive)
	(message-cite-prefix-regexp, message-sendmail-envelope-from)
	(message-yank-prefix, message-indentation-spaces, message-signature)
	(message-signature-file, message-default-headers): For GNU Emacs, set
	default values from the corresponding mail-* variables.
	(message-send-mail-with-sendmail): Use envelope-from only if
	mail-specify-envelope-from is non-nil.

2009-11-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2047.el (rfc2047-decode-region): Don't quote decoded words
	containing tspecial characters if they have been already quoted.

2009-10-24  Glenn Morris  <rgm@gnu.org>

	* gnus-art.el (help-xref-stack-item): Define for compiler.

2009-10-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-remove-overlays): eval-and-compile.

2009-10-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-show-thread): Remove useless goto-char.
	(gnus-summary-show-thread, gnus-summary-hide-thread): Indent.

2009-10-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-overlay-get): New alias to overlay-get.
	(gnus-overlays-in): New alias to overlays-in.
